infra-module/ec2.tf

#ec2.tf


resource "aws_key_pair" "aws_key" {
  key_name = "${var.env}-backend-key"
  public_key = file("terra-key-ec2.pub")

}

resource "aws_vpc" "default" {
    cidr_block = "10.0.0.0/16"
    enable_dns_hostnames = true  # forhostname ec2***aws.a
    enable_dns_support = true   #for ping sunch googleping
    tags = {
        Name = "${var.env}-default-vpc"
    }
}

resource "aws_subnet" "default" {
    vpc_id = aws_vpc.default.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-east-1a"
    map_public_ip_on_launch = true # for public ip
    tags = {
      Name = "${var.env}-terraform-subnet"
    }
}

resource "aws_internet_gateway" "ig1" {
    vpc_id = aws_vpc.default.id
    tags = {
        Name = "${var.env}-igTF"
    }
  
}


resource "aws_route_table" "rt1" {
  vpc_id = aws_vpc.default.id 
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.ig1.id
  }

    tags = {
    Name = "${var.env}-public-route-table"
    }
}

resource "aws_route_table_association" "public_assoc" {
  subnet_id      = aws_subnet.default.id
  route_table_id = aws_route_table.rt1.id
}


resource "aws_security_group" "my_sg" {
  name = "${var.env}-tf-sg"
  description = "this is sg acc to env"
  vpc_id = aws_vpc.default.id
  ingress {
    description = "Allow HTTP ACCESS"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    ingress {
    description = "Allow HTTPs ACCESS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    description = "Allow SSH ACCESS "
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress{
    description = "Allow all outboun traffic"
    from_port = 0
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
    protocol = "-1"
  }

   tags = {
    Name = "${var.env}-infra-app-sg-TF"
   }

}


resource "aws_instance" "my_instance" {
    count = var.instance_count
    instance_type =  var.instance_type
    ami =  var.ec2_ami_id
    subnet_id = aws_subnet.default.id
    vpc_security_group_ids = [aws_security_group.my_sg.id]
    key_name = aws_key_pair.aws_key.key_name

    root_block_device {
      volume_size = var.env == "prd" ? 10 : 8
      volume_type = "gp3"
    }


    tags = {
        Environment = "${var.env}-infra-app-instance"
        Name = var.env
    }
}
